# csman-prototype

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO-LIST.md
csman-cli/: CMakeLists.txt
csman-core/: CMakeLists.txt
csman-core/include/: dummy.hpp
csman-core/src/: dummy.cpp
